# tango

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Makefile  README.md  app.config.js  cspell.json  go.work  jest.config.js  package-lock.json  package.json  serve.js  tsconfig.json  webpack.config.js
common-go/: args.go  exit.go  go.mod  kana.go  kana_test.go  timer.go
data-tables/: chars.jsonc
export-json/: go.mod  main.go
export-json/data/: db.go  entries.go  names.go  tag.go  util.go  writer.go
import/: Cargo.toml  go.mod  go.sum  main.go
import-data/: Cargo.toml
import-data/src/: jmdict.rs  lib.rs  paths.rs
import/db/: common.go  common_test.go  entries_writer.go  entries_writer_test.go  frequency_writer.go  frequency_writer_test.go  kanji_writer.go  kanji_writer_test.go  names_writer.go  names_writer_test.go
import/files/: find.go  find_test.go  tags.go  zip.go
import/frequency/: entry.go  entry_test.go  info.go  info_test.go  load.go  load_test.go  pair.go  pair_test.go  word.go  word_test.go
import/jmdict/: decoder.go  decoder_test.go  entry.go  entry_test.go  load.go  load_test.go
import/jmnedict/: decoder.go  decoder_test.go  load.go  load_test.go  name.go  name_test.go
import/kanji/: character.go  character_test.go  decoder.go  decoder_test.go  info.go  load.go  load_test.go
import/src/: main.rs
tango-srv/: Cargo.toml
tango-srv/src/: main.rs
tango-srv/tests/: common.rs  test_server.rs
tango-web/: App.tsx  Header.tsx  index.test.ts  index.ts
tango-web/css/: main.less  theme.less
testable/: Cargo.toml
(+11 files in other folders)
