[package]
name = "tango-srv"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging
log = "0.4"
env_logger = "0.9"

# Server
tokio = { version = "1", features = ["full"] }
warp = "0.3"
listenfd = "1.0"
