[package]
name = "tango-srv"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# General
regex = "1.6"

# Logging
log = "0.4"
env_logger = "0.9"

# Server
tokio = { version = "1", features = ["full"] }
warp = "0.3"
listenfd = "1.0"

# GraphQL
juniper = "0.15.9"
juniper_warp = "0.7.0"

# Serialization
serde = { version = "1.0" }
serde_json = { version = "1.0" }

[dev-dependencies]

reqwest = { version = "0.11", features = ["blocking", "json"] }
testable = { path = "../testable" }
tux = { version = "0.2" }

assert-json-diff = "2.0"
